--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1> Hello nig nogs </h1>
 <p> I'm hosting with nigs nogs. </p>
+<a href="http://imgur.com/9tODxTd"><img src="http://i.imgur.com/9tODxTd.gif" title="source: imgur.com" /></a>
 </body>
 </html>
